# SPDX-FileCopyrightText: Fondazione Istituto Italiano di Tecnologia
# SPDX-License-Identifier: BSD-3-Clause

[metadata]
name = mann-pytorch
version = 1.0
description = PyTorch implementation of a Mode-Adaptive Neural Network
author = Paolo Maria Viceconte
author_email = paolo.viceconte@iit.com
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/ami-iit/mann-pytorch

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy>=1.20
    tensorboard
    torch>=2.0.0
    adam-robotics

[options.packages.find]
where = src
